--- a/fightinterface.ui
+++ b/fightinterface.ui
@@ -49,7 +49,7 @@
          <item>
           <layout class="QHBoxLayout" name="horizontalLayout_7" stretch="4,1">
            <item>
-            <widget class="QLabel" name="label_3">
+            <widget class="QLabel" name="MainPic">
              <property name="styleSheet">
               <string notr="true">background-color: rgb(170, 85, 255);</string>
              </property>
@@ -171,7 +171,7 @@
                 <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
                </property>
                <property name="styleSheet">
-                <string notr="true">background-color: rgb(255, 170, 0);</string>
+                <string notr="true">background-color: orange;</string>
                </property>
                <property name="text">
                 <string>手卡1</string>
