--- a/fightinterface.ui
+++ b/fightinterface.ui
@@ -45,66 +45,20 @@
       </property>
       <layout class="QHBoxLayout" name="horizontalLayout_10" stretch="1,2">
        <item>
-        <layout class="QVBoxLayout" name="verticalLayout_3" stretch="1,1">
+        <layout class="QVBoxLayout" name="verticalLayout_3" stretch="1">
          <item>
-          <layout class="QHBoxLayout" name="horizontalLayout_7" stretch="4,1">
+          <layout class="QHBoxLayout" name="horizontalLayout_7" stretch="4">
            <item>
             <widget class="QLabel" name="MainPic">
              <property name="styleSheet">
               <string notr="true">background-color: rgb(170, 85, 255);</string>
              </property>
              <property name="text">
-              <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:14pt;&quot;&gt;卡牌展示&lt;/span&gt;&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:14pt;&quot;&gt;（此处插入图片）&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+              <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
              </property>
             </widget>
            </item>
-           <item>
-            <layout class="QVBoxLayout" name="verticalLayout">
-             <item>
-              <widget class="QPushButton" name="surrenderButton">
-               <property name="sizePolicy">
-                <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
-                 <horstretch>0</horstretch>
-                 <verstretch>0</verstretch>
-                </sizepolicy>
-               </property>
-               <property name="text">
-                <string>投降</string>
-               </property>
-              </widget>
-             </item>
-             <item>
-              <widget class="QPushButton" name="backToMainButton">
-               <property name="sizePolicy">
-                <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
-                 <horstretch>0</horstretch>
-                 <verstretch>0</verstretch>
-                </sizepolicy>
-               </property>
-               <property name="text">
-                <string>Back to main</string>
-               </property>
-              </widget>
-             </item>
-            </layout>
-           </item>
           </layout>
-         </item>
-         <item>
-          <widget class="QLabel" name="label_4">
-           <property name="sizePolicy">
-            <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
-             <horstretch>0</horstretch>
-             <verstretch>0</verstretch>
-            </sizepolicy>
-           </property>
-           <property name="styleSheet">
-            <string notr="true">background-color: rgb(255, 170, 0);</string>
-           </property>
-           <property name="text">
-            <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;此处是信息&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-           </property>
-          </widget>
          </item>
         </layout>
        </item>
@@ -115,6 +69,19 @@
            <property name="spacing">
             <number>4</number>
            </property>
+           <item>
+            <widget class="QPushButton" name="backToMainButton">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
+             <property name="text">
+              <string>Back to main</string>
+             </property>
+            </widget>
+           </item>
            <item>
             <widget class="QLabel" name="BloodA">
              <property name="sizePolicy">
